# async_pipeline_experiment

./: README.md  pyproject.toml
async_pipeline/: extractor.py  legacy.py  loader.py  original.py  run.py  stage.py  transformer.py
tests/: test_async_pipeline.py
tests/data/set_1/: doc_1  doc_2  doc_3  titi
